// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatHeader component snapshot with chat title 1`] = `
<div
  className="chat-header"
>
  <div
    className="chat-header__profile"
  >
    <span
      className="chat-header__profile__name"
    >
      Olá 
      xunda
      !
    </span>
    <span
      onClick={[Function]}
    >
       Nova sala
    </span>
  </div>
  <div
    className="chat-header__chat-name"
  >
    room name
  </div>
</div>
`;

exports[`ChatHeader component snapshot without chat title 1`] = `
<div
  className="chat-header"
>
  <div
    className="chat-header__profile"
  >
    <span
      className="chat-header__profile__name"
    >
      Olá 
      xunda
      !
    </span>
    <span
      onClick={[Function]}
    >
       Nova sala
    </span>
  </div>
</div>
`;
